// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddCavcDatesModal renders correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <section
        aria-describedby="modal_id-desc"
        aria-labelledby="modal_id-title"
        aria-modal="true"
        class="cf-modal active "
        id="modal_id"
        role="dialog"
      >
        <div
          class="cf-modal-body"
          id=""
        >
          <button
            class="cf-modal-close"
            id="Add-Court-dates-button-id-close"
            type="button"
          >
            <span
              class="usa-sr-only"
            >
              Close
            </span>
            <svg
              class="cf-icon-close"
              height="55"
              viewBox="0 0 55 55"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                close
              </title>
              <g
                fill="#212121"
              >
                <path
                  d="M52.6 46.9l-6 6c-.8.8-1.9 1.2-3 1.2s-2.2-.4-3-1.2l-13-13-13 13c-.8.8-1.9 1.2-3 1.2s-2.2-.4-3-1.2l-6-6c-.8-.8-1.2-1.9-1.2-3s.4-2.2 1.2-3l13-13-13-13c-.8-.8-1.2-1.9-1.2-3s.4-2.2 1.2-3l6-6c.8-.8 1.9-1.2 3-1.2s2.2.4 3 1.2l13 13 13-13c.8-.8 1.9-1.2 3-1.2s2.2.4 3 1.2l6 6c.8.8 1.2 1.9 1.2 3s-.4 2.2-1.2 3l-13 13 13 13c.8.8 1.2 1.9 1.2 3s-.4 2.2-1.2 3z"
                />
              </g>
            </svg>
          </button>
          <div
            style="display: flex;"
          >
            <div
              data-css-1gs0ko2=""
            >
              <h1
                id="modal_id-title"
              >
                Add Court dates
              </h1>
              <div
                data-css-o98ubo=""
              >
                <p>
                  Complete the details below to intake this Court remand for further processing
                </p>
                <div
                  class="cf-form-textinput   "
                >
                  <label
                    for="judgement-date"
                  >
                    <strong>
                      <span>
                        What is the Court's judgement date?
                      </span>
                    </strong>
                  </label>
                  <div
                    class="input-container"
                  >
                    <input
                      class="cf-form-textinput"
                      id="judgement-date"
                      max="9999-12-31"
                      name="judgement-date"
                      placeholder="mm/dd/yyyy"
                      type="date"
                      value=""
                    />
                    <div
                      className="cf-modal-controls"
                    >
                      <Button
                        aria-label="Cancel"
                        classNames={
                          Array [
                            "usa-button",
                            "cf-btn-link",
                            "cf-push-left",
                          ]
                        }
                        id="Add-Court-dates-button-id-0"
                        key="0"
                        linkStyling={false}
                        loading={false}
                        name="Cancel"
                        onClick={[Function]}
                        type="button"
                        willNeverBeLoading={false}
                      >
                        <span>
                          <button
                            className="usa-button cf-btn-link cf-push-left usa-button"
                            id="Add-Court-dates-button-id-0"
                            onClick={[Function]}
                            type="button"
                          >
                            Cancel
                          </button>
                        </span>
                      </Button>
                      <Button
                        aria-label="Submit"
                        classNames={
                          Array [
                            "usa-button",
                            "usa-button-hover",
                            "usa-button-warning",
                            "cf-push-right",
                          ]
                        }
                        disabled={false}
                        id="Add-Court-dates-button-id-1"
                        key="1"
                        linkStyling={false}
                        loading={false}
                        name="Submit"
                        onClick={[Function]}
                        type="button"
                        willNeverBeLoading={false}
                      >
                        <span>
                          <button
                            className="usa-button usa-button-hover usa-button-warning cf-push-right usa-button"
                            disabled={false}
                            id="Add-Court-dates-button-id-1"
                            onClick={[Function]}
                            type="button"
                          >
                            Submit
                          </button>
                        </span>
                      </Button>
                    </div>
                  </div>
                </div>
                <div
                  class="cf-form-textinput   "
                >
                  <label
                    for="mandate-date"
                  >
                    <strong>
                      <span>
                        What is the Court's mandate date?
                      </span>
                    </strong>
                  </label>
                  <div
                    class="input-container"
                  >
                    <input
                      class="cf-form-textinput"
                      id="mandate-date"
                      max="9999-12-31"
                      name="mandate-date"
                      placeholder="mm/dd/yyyy"
                      type="date"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="cf-form-textarea"
                >
                  <label
                    class="question-label"
                    for="context-and-instructions-textBox"
                  >
                    <strong>
                      <span>
                        Provide instructions and context for this action
                      </span>
                    </strong>
                  </label>
                  <textarea
                    id="context-and-instructions-textBox"
                    name="context-and-instructions-textBox"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="cf-modal-divider"
          />
          <div
            class="cf-modal-controls"
          >
            <span>
              <button
                class="usa-button cf-btn-link cf-push-left usa-button"
                id="Add-Court-dates-button-id-0"
                type="button"
              >
                Cancel
              </button>
            </span>
            <span>
              <button
                class="usa-button usa-button-hover usa-button-warning cf-push-right usa-button"
                id="Add-Court-dates-button-id-1"
                type="button"
              >
                Submit
              </button>
            </span>
          </div>
        </div>
      </section>
    </div>
  </body>,
  "container": <div>
    <section
      aria-describedby="modal_id-desc"
      aria-labelledby="modal_id-title"
      aria-modal="true"
      class="cf-modal active "
      id="modal_id"
      role="dialog"
    >
      <div
        class="cf-modal-body"
        id=""
      >
        <button
          class="cf-modal-close"
          id="Add-Court-dates-button-id-close"
          type="button"
        >
          <span
            class="usa-sr-only"
          >
            Close
          </span>
          <svg
            class="cf-icon-close"
            height="55"
            viewBox="0 0 55 55"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              close
            </title>
            <g
              fill="#212121"
            >
              <path
                d="M52.6 46.9l-6 6c-.8.8-1.9 1.2-3 1.2s-2.2-.4-3-1.2l-13-13-13 13c-.8.8-1.9 1.2-3 1.2s-2.2-.4-3-1.2l-6-6c-.8-.8-1.2-1.9-1.2-3s.4-2.2 1.2-3l13-13-13-13c-.8-.8-1.2-1.9-1.2-3s.4-2.2 1.2-3l6-6c.8-.8 1.9-1.2 3-1.2s2.2.4 3 1.2l13 13 13-13c.8-.8 1.9-1.2 3-1.2s2.2.4 3 1.2l6 6c.8.8 1.2 1.9 1.2 3s-.4 2.2-1.2 3l-13 13 13 13c.8.8 1.2 1.9 1.2 3s-.4 2.2-1.2 3z"
              />
            </g>
          </svg>
        </button>
        <div
          style="display: flex;"
        >
          <div
            data-css-1gs0ko2=""
          >
            <h1
              id="modal_id-title"
            >
              Add Court dates
            </h1>
            <div
              data-css-o98ubo=""
            >
              <p>
                Complete the details below to intake this Court remand for further processing
              </p>
              <div
                class="cf-form-textinput   "
              >
                <label
                  for="judgement-date"
                >
                  <strong>
                    <span>
                      What is the Court's judgement date?
                    </span>
                  </strong>
                </label>
                <div
                  class="input-container"
                >
                  <input
                    class="cf-form-textinput"
                    id="judgement-date"
                    max="9999-12-31"
                    name="judgement-date"
                    placeholder="mm/dd/yyyy"
                    type="date"
                    value=""
                  />
                </div>
              </div>
              <div
                class="cf-form-textinput   "
              >
                <label
                  for="mandate-date"
                >
                  <strong>
                    <span>
                      What is the Court's mandate date?
                    </span>
                  </strong>
                </label>
                <div
                  class="input-container"
                >
                  <input
                    class="cf-form-textinput"
                    id="mandate-date"
                    max="9999-12-31"
                    name="mandate-date"
                    placeholder="mm/dd/yyyy"
                    type="date"
                    value=""
                  />
                </div>
              </div>
              <div
                class="cf-form-textarea"
              >
                <label
                  class="question-label"
                  for="context-and-instructions-textBox"
                >
                  <strong>
                    <span>
                      Provide instructions and context for this action
                    </span>
                  </strong>
                </label>
                <textarea
                  id="context-and-instructions-textBox"
                  name="context-and-instructions-textBox"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="cf-modal-divider"
        />
        <div
          class="cf-modal-controls"
        >
          <span>
            <button
              class="usa-button cf-btn-link cf-push-left usa-button"
              id="Add-Court-dates-button-id-0"
              type="button"
            >
              Cancel
            </button>
          </span>
          <span>
            <button
              class="usa-button usa-button-hover usa-button-warning cf-push-right usa-button"
              id="Add-Court-dates-button-id-1"
              type="button"
            >
              Submit
            </button>
          </span>
        </div>
      </div>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AddCavcDatesModal submits successfully 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <section
        aria-describedby="modal_id-desc"
        aria-labelledby="modal_id-title"
        aria-modal="true"
        class="cf-modal active "
        id="modal_id"
        role="dialog"
      >
        <div
          class="cf-modal-body"
          id=""
        >
          <button
            class="cf-modal-close"
            id="Add-Court-dates-button-id-close"
            type="button"
          >
            <span
              class="usa-sr-only"
            >
              Close
            </span>
            <svg
              class="cf-icon-close"
              height="55"
              viewBox="0 0 55 55"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                close
              </title>
              <g
                fill="#212121"
              >
                <path
                  d="M52.6 46.9l-6 6c-.8.8-1.9 1.2-3 1.2s-2.2-.4-3-1.2l-13-13-13 13c-.8.8-1.9 1.2-3 1.2s-2.2-.4-3-1.2l-6-6c-.8-.8-1.2-1.9-1.2-3s.4-2.2 1.2-3l13-13-13-13c-.8-.8-1.2-1.9-1.2-3s.4-2.2 1.2-3l6-6c.8-.8 1.9-1.2 3-1.2s2.2.4 3 1.2l13 13 13-13c.8-.8 1.9-1.2 3-1.2s2.2.4 3 1.2l6 6c.8.8 1.2 1.9 1.2 3s-.4 2.2-1.2 3l-13 13 13 13c.8.8 1.2 1.9 1.2 3s-.4 2.2-1.2 3z"
                />
              </g>
            </svg>
          </button>
          <div
            style="display: flex;"
          >
            <div
              data-css-1gs0ko2=""
            >
              <h1
                id="modal_id-title"
              >
                Add Court dates
              </h1>
              <div
                data-css-o98ubo=""
              >
                <p>
                  Complete the details below to intake this Court remand for further processing
                </p>
                <div
                  class="cf-form-textinput   "
                >
                  <label
                    for="judgement-date"
                  >
                    <strong>
                      <span>
                        What is the Court's judgement date?
                      </span>
                    </strong>
                  </label>
                  <div
                    class="input-container"
                  >
                    <input
                      class="cf-form-textinput"
                      id="judgement-date"
                      max="9999-12-31"
                      name="judgement-date"
                      placeholder="mm/dd/yyyy"
                      type="date"
                      value="2020-03-27"
                    />
                  </div>
                </div>
                <div
                  class="cf-form-textinput   "
                >
                  <label
                    for="mandate-date"
                  >
                    <strong>
                      <span>
                        What is the Court's mandate date?
                      </span>
                    </strong>
                  </label>
                  <div
                    class="input-container"
                  >
                    <input
                      class="cf-form-textinput"
                      id="mandate-date"
                      max="9999-12-31"
                      name="mandate-date"
                      placeholder="mm/dd/yyyy"
                      type="date"
                      value="2019-03-31"
                    />
                  </div>
                </div>
                <div
                  class="cf-form-textarea"
                >
                  <label
                    class="question-label"
                    for="context-and-instructions-textBox"
                  >
                    <strong>
                      <span>
                        Provide instructions and context for this action
                      </span>
                    </strong>
                  </label>
                  <textarea
                    id="context-and-instructions-textBox"
                    name="context-and-instructions-textBox"
                  >
                    test instructions
                  </textarea>
                </div>
              </div>
            </div>
          </div>
          <div
            class="cf-modal-divider"
          />
          <div
            class="cf-modal-controls"
          >
            <span>
              <button
                class="usa-button cf-btn-link cf-push-left usa-button"
                id="Add-Court-dates-button-id-0"
                type="button"
              >
                Cancel
              </button>
            </span>
            <span>
              <button
                class="cf-push-right usa-button-disabled hidden-field usa-button"
                id="Add-Court-dates-button-id-1"
                type="button"
              >
                Submit
              </button>
              <span>
                <button
                  class="cf-push-right usa-button-disabled cf-default cf-loading"
                  disabled=""
                  id="Add-Court-dates-button-id-1-loading"
                  type="button"
                >
                  <span
                    class="cf-loading-icon-container"
                  >
                    <span
                      class="cf-loading-icon-front"
                    >
                      <span
                        class="cf-loading-icon-back"
                      >
                        Loading...
                      </span>
                    </span>
                  </span>
                </button>
              </span>
            </span>
          </div>
        </div>
      </section>
    </div>
  </body>,
  "container": <div>
    <section
      aria-describedby="modal_id-desc"
      aria-labelledby="modal_id-title"
      aria-modal="true"
      class="cf-modal active "
      id="modal_id"
      role="dialog"
    >
      <div
        class="cf-modal-body"
        id=""
      >
        <button
          class="cf-modal-close"
          id="Add-Court-dates-button-id-close"
          type="button"
        >
          <span
            class="usa-sr-only"
          >
            Close
          </span>
          <svg
            class="cf-icon-close"
            height="55"
            viewBox="0 0 55 55"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              close
            </title>
            <g
              fill="#212121"
            >
              <path
                d="M52.6 46.9l-6 6c-.8.8-1.9 1.2-3 1.2s-2.2-.4-3-1.2l-13-13-13 13c-.8.8-1.9 1.2-3 1.2s-2.2-.4-3-1.2l-6-6c-.8-.8-1.2-1.9-1.2-3s.4-2.2 1.2-3l13-13-13-13c-.8-.8-1.2-1.9-1.2-3s.4-2.2 1.2-3l6-6c.8-.8 1.9-1.2 3-1.2s2.2.4 3 1.2l13 13 13-13c.8-.8 1.9-1.2 3-1.2s2.2.4 3 1.2l6 6c.8.8 1.2 1.9 1.2 3s-.4 2.2-1.2 3l-13 13 13 13c.8.8 1.2 1.9 1.2 3s-.4 2.2-1.2 3z"
              />
            </g>
          </svg>
        </button>
        <div
          style="display: flex;"
        >
          <div
            data-css-1gs0ko2=""
          >
            <h1
              id="modal_id-title"
            >
              Add Court dates
            </h1>
            <div
              data-css-o98ubo=""
            >
              <p>
                Complete the details below to intake this Court remand for further processing
              </p>
              <div
                class="cf-form-textinput   "
              >
                <label
                  for="judgement-date"
                >
                  <strong>
                    <span>
                      What is the Court's judgement date?
                    </span>
                  </strong>
                </label>
                <div
                  class="input-container"
                >
                  <input
                    class="cf-form-textinput"
                    id="judgement-date"
                    max="9999-12-31"
                    name="judgement-date"
                    placeholder="mm/dd/yyyy"
                    type="date"
                    value="2020-03-27"
                  />
                </div>
              </div>
              <div
                class="cf-form-textinput   "
              >
                <label
                  for="mandate-date"
                >
                  <strong>
                    <span>
                      What is the Court's mandate date?
                    </span>
                  </strong>
                </label>
                <div
                  class="input-container"
                >
                  <input
                    class="cf-form-textinput"
                    id="mandate-date"
                    max="9999-12-31"
                    name="mandate-date"
                    placeholder="mm/dd/yyyy"
                    type="date"
                    value="2019-03-31"
                  />
                </div>
              </div>
              <div
                class="cf-form-textarea"
              >
                <label
                  class="question-label"
                  for="context-and-instructions-textBox"
                >
                  <strong>
                    <span>
                      Provide instructions and context for this action
                    </span>
                  </strong>
                </label>
                <textarea
                  id="context-and-instructions-textBox"
                  name="context-and-instructions-textBox"
                >
                  test instructions
                </textarea>
              </div>
            </div>
          </div>
        </div>
        <div
          class="cf-modal-divider"
        />
        <div
          class="cf-modal-controls"
        >
          <span>
            <button
              class="usa-button cf-btn-link cf-push-left usa-button"
              id="Add-Court-dates-button-id-0"
              type="button"
            >
              Cancel
            </button>
          </span>
          <span>
            <button
              class="cf-push-right usa-button-disabled hidden-field usa-button"
              id="Add-Court-dates-button-id-1"
              type="button"
            >
              Submit
            </button>
            <span>
              <button
                class="cf-push-right usa-button-disabled cf-default cf-loading"
                disabled=""
                id="Add-Court-dates-button-id-1-loading"
                type="button"
              >
                <span
                  class="cf-loading-icon-container"
                >
                  <span
                    class="cf-loading-icon-front"
                  >
                    <span
                      class="cf-loading-icon-back"
                    >
                      <div
                        data-css-1gs0ko2=""
                      >
                        <h1
                          id="modal_id-title"
                        >
                          Add Court dates
                        </h1>
                        <div
                          data-css-o98ubo=""
                        >
                          <p>
                            Complete the details below to intake this Court remand for further processing
                          </p>
                          <DateSelector
                            errorMessage={null}
                            label="What is the Court's judgement date?"
                            name="judgement-date"
                            onChange={[Function]}
                            strongLabel={true}
                            type="date"
                            value="03/27/2020"
                          >
                            <TextField
                              className={
                                Array [
                                  "cf-form-textinput",
                                ]
                              }
                              errorMessage={null}
                              label="What is the Court's judgement date?"
                              max="9999-12-31"
                              name="judgement-date"
                              onChange={[Function]}
                              optional={false}
                              placeholder="mm/dd/yyyy"
                              required={false}
                              strongLabel={true}
                              type="date"
                              useAriaLabel={false}
                              validationError="Please select a valid date"
                              value="03/27/2020"
                            >
                              <div
                                className="cf-form-textinput   "
                              >
                                <label
                                  htmlFor="judgement-date"
                                >
                                  <strong>
                                    <FormLabel
                                      label="What is the Court's judgement date?"
                                      name="judgement-date"
                                      optional={false}
                                      required={false}
                                    >
                                      <span>
                                        What is the Court's judgement date?
                                      </span>
                                    </FormLabel>
                                  </strong>
                                </label>
                                <div
                                  className="input-container"
                                >
                                  <input
                                    className={
                                      Array [
                                        "cf-form-textinput",
                                      ]
                                    }
                                    id="judgement-date"
                                    max="9999-12-31"
                                    name="judgement-date"
                                    onBlur={[Function]}
                                    onChange={[Function]}
                                    placeholder="mm/dd/yyyy"
                                    type="date"
                                    value="03/27/2020"
                                  />
                                </div>
                                <div
                                  className="cf-validation"
                                >
                                  <span>
                                    Please select a valid date
                                  </span>
                                </div>
                              </div>
                            </TextField>
                          </DateSelector>
                          <DateSelector
                            errorMessage={null}
                            label="What is the Court's mandate date?"
                            name="mandate-date"
                            onChange={[Function]}
                            strongLabel={true}
                            type="date"
                            value="03/31/2019"
                          >
                            <TextField
                              className={
                                Array [
                                  "cf-form-textinput",
                                ]
                              }
                              errorMessage={null}
                              label="What is the Court's mandate date?"
                              max="9999-12-31"
                              name="mandate-date"
                              onChange={[Function]}
                              optional={false}
                              placeholder="mm/dd/yyyy"
                              required={false}
                              strongLabel={true}
                              type="date"
                              useAriaLabel={false}
                              validationError="Please select a valid date"
                              value="03/31/2019"
                            >
                              <div
                                className="cf-form-textinput   "
                              >
                                <label
                                  htmlFor="mandate-date"
                                >
                                  <strong>
                                    <FormLabel
                                      label="What is the Court's mandate date?"
                                      name="mandate-date"
                                      optional={false}
                                      required={false}
                                    >
                                      <span>
                                        What is the Court's mandate date?
                                      </span>
                                    </FormLabel>
                                  </strong>
                                </label>
                                <div
                                  className="input-container"
                                >
                                  <input
                                    className={
                                      Array [
                                        "cf-form-textinput",
                                      ]
                                    }
                                    id="mandate-date"
                                    max="9999-12-31"
                                    name="mandate-date"
                                    onBlur={[Function]}
                                    onChange={[Function]}
                                    placeholder="mm/dd/yyyy"
                                    type="date"
                                    value="03/31/2019"
                                  />
                                </div>
                                <div
                                  className="cf-validation"
                                >
                                  <span>
                                    Please select a valid date
                                  </span>
                                </div>
                              </div>
                            </TextField>
                          </DateSelector>
                          <TextareaField
                            characterLimitTopRight={false}
                            disabled={false}
                            errorMessage={null}
                            label="Provide instructions and context for this action"
                            name="context-and-instructions-textBox"
                            onChange={[Function]}
                            optional={false}
                            required={false}
                            strongLabel={true}
                            value="test instructions"
                          >
                            <div
                              className="cf-form-textarea"
                            >
                              <label
                                className="question-label"
                                htmlFor="context-and-instructions-textBox"
                              >
                                <strong>
                                  <FormLabel
                                    label="Provide instructions and context for this action"
                                    name="context-and-instructions-textBox"
                                    optional={false}
                                    required={false}
                                  >
                                    <span>
                                      Provide instructions and context for this action
                                    </span>
                                  </FormLabel>
                                </strong>
                              </label>
                              <textarea
                                disabled={false}
                                id="context-and-instructions-textBox"
                                name="context-and-instructions-textBox"
                                onChange={[Function]}
                                value="test instructions"
                              />
                            </div>
                          </TextareaField>
                        </div>
                      </div>
                    </div>
                    <div
                      className="cf-modal-divider"
                    />
                    <div
                      className="cf-modal-controls"
                    >
                      <Button
                        aria-label="Cancel"
                        classNames={
                          Array [
                            "usa-button",
                            "cf-btn-link",
                            "cf-push-left",
                          ]
                        }
                        id="Add-Court-dates-button-id-0"
                        key="0"
                        linkStyling={false}
                        loading={false}
                        name="Cancel"
                        onClick={[Function]}
                        type="button"
                        willNeverBeLoading={false}
                      >
                        <span>
                          <button
                            className="usa-button cf-btn-link cf-push-left usa-button"
                            id="Add-Court-dates-button-id-0"
                            onClick={[Function]}
                            type="button"
                          >
                            Cancel
                          </button>
                        </span>
                      </Button>
                      <Button
                        aria-label="Submit"
                        classNames={
                          Array [
                            "usa-button",
                            "usa-button-hover",
                            "usa-button-warning",
                            "cf-push-right",
                          ]
                        }
                        disabled={false}
                        id="Add-Court-dates-button-id-1"
                        key="1"
                        linkStyling={false}
                        loading={true}
                        name="Submit"
                        onClick={[Function]}
                        type="button"
                        willNeverBeLoading={false}
                      >
                        <span>
                          <button
                            className="cf-push-right usa-button-disabled hidden-field usa-button"
                            disabled={false}
                            id="Add-Court-dates-button-id-1"
                            onClick={[Function]}
                            type="button"
                          >
                            Submit
                          </button>
                          <LoadingIndicator>
                            <span>
                              <button
                                className="cf-push-right usa-button-disabled cf-default cf-loading"
                                disabled={true}
                                id="Add-Court-dates-button-id-1-loading"
                                type="button"
                              >
                                <span
                                  className="cf-loading-icon-container"
                                >
                                  <span
                                    className="cf-loading-icon-front"
                                  >
                                    <span
                                      className="cf-loading-icon-back"
                                    >
                                      Loading...
                                    </span>
                                  </span>
                                </span>
                              </button>
                            </span>
                          </LoadingIndicator>
                        </span>
                      </Button>
                    </div>
                  </div>
                </section>
              </Modal>
            </FlowModal>
          </QueueFlowModal>
        </Connect(QueueFlowModal)>
      </withRouter(Connect(QueueFlowModal))>
    </AddCavcDatesModal>
  </Connect(AddCavcDatesModal)>
</withRouter(Connect(AddCavcDatesModal))>
`;
